# cpp-basics

./: CMakeLists.txt  README.txt
app/: .test_random.cpp.swp  test_random.cpp  test_rational.cpp
cktmp/: commit_history  commit_id  submission_source
cktmp/distribution/: CMakeLists.txt
cktmp/distribution/app/: test_random.cpp
cktmp/package-random_orig/build-test_random/: log
cktmp/package-random_orig/configure/: log
cktmp/package-random_orig/derived/: CMakeCache.txt  Makefile  cmake_install.cmake
cktmp/package-random_sane/build-test_random/: log
cktmp/package-random_sane/configure/: log
cktmp/package-random_sane/derived/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  test_random
cktmp/package-rational_orig/configure/: log
cktmp/package-rational_orig/derived/: CMakeCache.txt  Makefile  cmake_install.cmake
cktmp/package-rational_sane/build-test_rational/: log
cktmp/package-rational_sane/configure/: log
cktmp/package-rational_sane/derived/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  test_rational
include/ra/: .random.hpp.swp  random.hpp  rational.hpp
lib/: random.cpp
tmp/: CMakeCache.txt  Makefile  assignment_id  cmake_install.cmake  commit_history  commit_id  random  rational
tmp/distribution/: IDENTIFICATION.txt
tmp/distribution/app/: test_rational.cpp
tmp/package-random_orig/configure/: log
tmp/package-random_orig/derived/: CMakeCache.txt  Makefile  cmake_install.cmake
tmp/package-random_sane/build-test_random/: log
tmp/package-random_sane/configure/: log
(+22 files in other folders)
